# Car_Price_Pridiction_ML

./: .dockerignore  .gitignore  Artifact.dvc  README.md  app.py  cloud_model.dvc  columns.yaml  data.dvc  dockerfile  main.py  my_model.dvc  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: workflow.yaml
productiuon_model/: ml_model.joblib  pre_model.joblib
research/: experiment.ipynb  model_push.ipynb  model_training.ipynb  mongo.ipynb
src/: experiment.ipynb  model_training.ipynb
src/artifact/: artifact.py
src/aws_storage/: aws_store.py
src/cloud/: aws_conn.py
src/component/: data_transformation.py  model_evaluation.py  model_push.py  model_training.py
src/config/: config.py
src/entity/: s3_estimator.py
src/exception/: project_exception.py
src/logging/: logger.py
src/pipeline/: test_pipe.py  train_pipe.py
src/utils/my_utils/: __init__.py  utils.py
templates/: index.html  main.html  predict.html  train.html
