[project]
name = "complete-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exception>=0.1.0",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "complete-ml-pipeline",
    "dotenv>=0.9.9",
    "dvc-s3>=3.2.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pymongo>=4.12.0",
    "scikit-learn>=1.6.1",
    "setuptools>=78.1.0",
]

[tool.uv.sources]
complete-ml-pipeline = { workspace = true }
