[project]
name = "complete-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.1.31",
    "dagshub>=0.5.9",
    "dotenv>=0.9.9",
    "dvc-s3>=3.2.0",
    "exception>=0.1.0",
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "pandas>=2.2.3",
    "pymongo>=4.12.0",
    "scikit-learn>=1.6.1",
    "setuptools>=78.1.0",
]

[dependency-groups]
dev = [
    "complete-ml-pipeline",
    "dotenv>=0.9.9",
    "dvc-s3>=3.2.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pymongo>=4.12.0",
    "scikit-learn>=1.6.1",
    "setuptools>=78.1.0",
]

[tool.uv.sources]
complete-ml-pipeline = { workspace = true }
